--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         <button>Entrar</button>
         <a class="OU">________________ OU ________________</a>
+       <div class="face-logo"></div>
         <a class="facebook">Entrar com Facebook</a>
         <a class="esqueceu-senha">Esqueceu a senha ?</a>
         <i class="instagramm" data-visualcompletion="css-img" aria-label="Instagram" class="" role="img"
@@ -62,12 +63,8 @@
 
 
 
-
-    <div class="face-logo">
-
-
-
-    </div>
+ 
+   
 
 
     </div>
