link "Play Store" e "Microsoft"

--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
 
 
     <div>
-        <img src="img/googleplay.png" class="google">
-        <img src="img/microsoft.png" class="microsoft">
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=pt_BR&gl=US" target="_blank">
+        <img src="img/googleplay.png"class="google"></a>
+        
+        <a href="ms-windows-store://pdp/?productid=9nblggh5l9xt&referrer=appbadge&source=www.instagram.com&mode=mini&pos=0%2C0%2C1366%2C728" target="_blank">
+        <img src="img/microsoft.png" class="microsoft"></a>
 
     </div>
 
