--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <div class="imagens">
 
         <img src="img/celular.png" class="img-celular">
-        <img src="img/insta1.png" class="img-insta">
-        <img src="img/insta2.png" class="img-insta img-2">
+        <video src="InShot_20231204_210311036.mp4" autoplay muted loop></video>
 
 
     </div>
@@ -84,23 +83,7 @@
 
 </body>
 
-<script>
 
-    let imagem = document.querySelector(".img-2")
-
-    setInterval(() => {
-
-        if (imagem.style.opacity == 0) {
-            imagem.style.opacity = 1
-        } else {
-            imagem.style.opacity = 0
-        }
-
-    }, 4000)
-
-    imagem.style.opacity = 1
-
-</script>
 
 
 </html>
