CSS e HTML instagram Responsivel.
Através do "@media" adaptei para celulares e notebooks.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="img/instagram-icone-icon.png">
     <title>Instagram</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 
 
@@ -24,8 +25,7 @@
 
 
     </div>
-
-
+<div class="caixa-branca">
     <div class="container">
 
         <img src="">
@@ -38,12 +38,13 @@
         <a class="facebook">Entrar com Facebook</a>
         <a class="esqueceu-senha">Esqueceu a senha ?</a>
         <i class="instagramm" data-visualcompletion="css-img" aria-label="Instagram" class="" role="img"
-            style="background-image: url(&quot;https://static.cdninstagram.com/rsrc.php/v3/yS/r/ajlEU-wEDyo.png&quot;); background-position: 0px -52px; background-size: auto; width: 175px; height: 51px; background-repeat: no-repeat; display: inline-block;"></i>
+           
+        style="background-image: url(&quot;https://static.cdninstagram.com/rsrc.php/v3/yS/r/ajlEU-wEDyo.png&quot;); background-position: 0px -52px; background-size: auto; width: 175px; height: 51px; background-repeat: no-repeat; display: inline-block;"></i>
 
 
 
     </div>
-
+ 
     <div class="cadastro">
 
         <a>Não tem uma conta? <span>Cadastre-se</span></a>
@@ -79,7 +80,7 @@
 
     </div>
 
-
+</div>
 
 </body>
 
